# ai-video-trailer

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.0-UAT.md
.planning/debug/: gap1-cinecut-not-on-path.md  gap2-extension-validation-order.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-ingestion-pipeline-and-cli-shell/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-manifest-contract-vibes-and-conform/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-llava-inference-engine/: 03-01-SUMMARY.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-narrative-beat-extraction-and-manifest-generation/: 04-02-PLAN.md
.planning/phases/05-trailer-assembly-and-end-to-end-pipeline/: 05-02-SUMMARY.md  05-03-SUMMARY.md  05-04-SUMMARY.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/cinecut/: checkpoint.py  cli.py  errors.py  models.py
src/cinecut/assembly/: bpm.py  (+4 more)
tests/: test_assembly.py  test_bpm.py  test_cache.py  test_checkpoint.py  test_cli.py  test_conform_unit.py  test_inference.py  test_keyframes.py  test_manifest.py  test_music.py  test_narrative.py  test_proxy.py  test_sfx_vo_mix.py  test_structural.py  test_subtitles.py  test_zone_matching.py
tests/fixtures/: sample_manifest.json
(+82 files in other folders)
